--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5434/ohayo"
+JWT_SECRET_ACCESS = "i have a dream"
+JWT_SECRET_REFRESH = "i will be a dreamer"
+JWT_ACCESS_TIME = "3d"
+JWT_REFRESH_TIME = "7d"
