--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+PORT = 3000
 DATABASE_URL="postgresql://postgres:postgres@localhost:5434/ohayo"
 JWT_SECRET_ACCESS = "i have a dream"
 JWT_SECRET_REFRESH = "i will be a dreamer"
